--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,3 +2,31 @@ html,
 body {
     height: 100%;
 }
+
+/* label color */
+ .input-field label {
+   color: #126fb7;
+ }
+ /* label focus color */
+ .input-field input[type=email]:focus + label, .input-field input[type=password]:focus + label {
+   color: #126fb7;
+ }
+ /* label underline focus color */
+ .input-field input[type=email]:focus,.input-field input[type=password]:focus {
+   border-bottom: 1px solid #126fb7;
+   box-shadow: 0 1px 0 0 #126fb7;
+ }
+ /* valid color */
+ .input-field input[type=email].valid,.input-field input[type=password].valid {
+   border-bottom: 1px solid #126fb7;
+   box-shadow: 0 1px 0 0 #126fb7;
+ }
+ /* invalid color */
+ .input-field input[type=email].invalid, .input-field input[type=password].invalid {
+   border-bottom: 1px solid #126fb7;
+   box-shadow: 0 1px 0 0 #126fb7;
+ }
+ /* icon prefix focus color */
+ .input-field .prefix.active {
+   color: #126fb7;
+ }
