--- a/src/css/style.css
+++ b/src/css/style.css
@@ -35,3 +35,33 @@ body {
  .picker__date-display, .picker__weekday-display{
     background-color: #2196F3;
 }
+
+select.invalid ~ .select-dropdown {
+      border-bottom: 1px solid #F44336;
+}
+
+@media only screen and (min-width : 601px) and (max-width : 1260px) {
+.toast {
+width: 100%;
+border-radius: 0;} }
+
+@media only screen and (min-width : 1261px) {
+.toast {
+width: 100%;
+border-radius: 0; } }
+
+@media only screen and (min-width : 601px) and (max-width : 1260px) {
+#toast-container {
+min-width: 100%;
+bottom: 0%;
+top: 90%;
+right: 0%;
+left: 0%;} }
+
+@media only screen and (min-width : 1261px) {
+#toast-container {
+min-width: 100%;
+bottom: 0%;
+top: 90%;
+right: 0%;
+left: 0%; } }
