--- a/src/materialize/css/materialize.css
+++ b/src/materialize/css/materialize.css
@@ -1007,6 +1007,7 @@
   background-color: #80cbc4 !important;
 }
 
+
 .teal-text.text-lighten-3 {
   color: #80cbc4 !important;
 }
@@ -5601,8 +5602,8 @@ input[type=tel]:focus:not([readonly]),
 input[type=number]:focus:not([readonly]),
 input[type=search]:focus:not([readonly]),
 textarea.materialize-textarea:focus:not([readonly]) {
-  border-bottom: 1px solid #26a69a;
-  box-shadow: 0 1px 0 0 #26a69a;
+  border-bottom: 1px solid #8dc63f;
+  box-shadow: 0 1px 0 0 #8dc63f;
 }
 
 input:not([type]):focus:not([readonly]) + label,
@@ -5618,7 +5619,7 @@ input[type=tel]:focus:not([readonly]) + label,
 input[type=number]:focus:not([readonly]) + label,
 input[type=search]:focus:not([readonly]) + label,
 textarea.materialize-textarea:focus:not([readonly]) + label {
-  color: #26a69a;
+  color: #8dc63f;
 }
 
 input:not([type]).valid, input:not([type]):focus.valid,
@@ -5646,8 +5647,8 @@ input[type=search].valid,
 input[type=search]:focus.valid,
 textarea.materialize-textarea.valid,
 textarea.materialize-textarea:focus.valid {
-  border-bottom: 1px solid #4CAF50;
-  box-shadow: 0 1px 0 0 #4CAF50;
+  border-bottom: 1px solid #8dc63f;
+  box-shadow: 0 1px 0 0 #8dc63f;
 }
 
 input:not([type]).valid + label:after,
@@ -5677,7 +5678,7 @@ input[type=search]:focus.valid + label:after,
 textarea.materialize-textarea.valid + label:after,
 textarea.materialize-textarea:focus.valid + label:after {
   content: attr(data-success);
-  color: #4CAF50;
+  color: #8dc63f;
   opacity: 1;
 }
 
